objects/AcctSeedERP__Inbound_Inventory_Movement__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Offsetting general ledger account for the transaction.</inlineHelpText>
        <label>Credit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements (Debit GL Account)</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Executed_Available_Quantity__c</fullName>
        <formula>IF(ISBLANK(AcctSeedERP__Prior_Available_Quantity__c), NULL, AcctSeedERP__Prior_Available_Quantity__c + AcctSeedERP__Quantity__c)</formula>
        <inlineHelpText>The available quantity of this product for this ledger including this transaction.</inlineHelpText>
        <label>Executed Available Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Executed_Average_Cost__c</fullName>
        <formula>IF(OR(ISBLANK(AcctSeedERP__Prior_Average_Cost__c), ISPICKVAL(AcctSeedERP__Type__c, &quot;Inventory Transfer&quot;)), NULL, ((AcctSeedERP__Prior_Average_Cost__c * AcctSeedERP__Prior_Available_Quantity__c) + (AcctSeedERP__Quantity__c *  AcctSeedERP__Unit_Cost__c ))/ (AcctSeedERP__Prior_Available_Quantity__c +  AcctSeedERP__Quantity__c))</formula>
        <inlineHelpText>The average cost of this product for this ledger including this transaction.</inlineHelpText>
        <label>Executed Average Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inventory_Balance__c</fullName>
        <inlineHelpText>The related Inventory Balance.</inlineHelpText>
        <label>Inventory Quantity Available</label>
        <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__LedgerId__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Ledger__c</formula>
        <label>LedgerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Location__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The location that was selected on the related Inventory Balance.</inlineHelpText>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Movement_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Date used to indicate which accounting period the transaction should be booked in.</inlineHelpText>
        <label>Movement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Outbound_Inventory_Movement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound Inventory Movement</label>
        <referenceTo>AcctSeedERP__Outbound_Inventory_Movement__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Prior_Available_Quantity__c</fullName>
        <label>Prior Available Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Prior_Average_Cost__c</fullName>
        <label>Prior Average Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__ProductId__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product that was selected on the related Inventory Balance.</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Line item that is related to the Inbound Inventory Movement.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The project that is related to the Inbound Inventory Movement.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity__c</fullName>
        <inlineHelpText>The number of units being moved.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Serial_Number__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Type__c</fullName>
        <inlineHelpText>Description of the type of transaction.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Build</fullName>
                </value>
                <value>
                    <fullName>Cycle Count Adjustment</fullName>
                </value>
                <value>
                    <fullName>Return from Customer</fullName>
                </value>
                <value>
                    <fullName>Issue from Vendor</fullName>
                </value>
                <value>
                    <fullName>Opening Balance</fullName>
                </value>
                <value>
                    <fullName>Non-Accounting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Inbound Receipt</fullName>
                </value>
                <value>
                    <fullName>Re-allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Unit_Cost__c</fullName>
        <inlineHelpText>The cost per unit for the product listed.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Warehouse__c</fullName>
        <formula>AcctSeedERP__Inventory_Balance__r.AcctSeedERP__Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The warehouse that was selected on the related Inventory Balance.</inlineHelpText>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The regional office that is related to the Inbound Inventory Movement.</inlineHelpText>
        <label>Branch</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_GL_Account_from_Project__c</fullName>
        <description>displays name of Default Expense GL Account from related project.</description>
        <formula>AcctSeedERP__Project__r.Default_Expense_GL_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays name of Default Expense GL Account from related project.</inlineHelpText>
        <label>Credit GL Account from Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Movement_Total__c</fullName>
        <description>Unit Cost x Quantity</description>
        <formula>AcctSeedERP__Unit_Cost__c *  AcctSeedERP__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Movement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Warehouse</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_AcctSeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to link PO that material was ordered on to transaction. Only required for first time receipt; not required for adjustments.</inlineHelpText>
        <label>Purchase Order AcctSeed</label>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements (Purchase Order AcctSeed)</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value for Purchase Order Line does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>SFDC_Purchase_Order__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Document__c</fullName>
        <inlineHelpText>Document control # that corresponds to receipt confirmation document received from the warehouse.  If this is an adjustment, field should be used to indicate adjustment #.</inlineHelpText>
        <label>Receiving Document #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value for Site does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.AcctSeedERP__Project__c</field>
                <operation>equals</operation>
                <valueField>Site__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Jurisdiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Jurisdiction</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Inbound Inventory Movements</relationshipLabel>
        <relationshipName>Inbound_Inventory_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <description>pulls in % from related Tax Jurisdiction based on Site</description>
        <formula>Tax_Jurisdiction__r.Tax_Group_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls in % from related Tax Jurisdiction based on Site</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Burdened_Value__c</fullName>
        <description>Total Burdened Value = Quantity x Unit Value</description>
        <formula>Unit_Value__c *  AcctSeedERP__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Burdened Value = Quantity x Unit Value</inlineHelpText>
        <label>Total Burdened Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Value__c</fullName>
        <description>Unit_Cost__c * (1+ (0.01*  Tax_Rate__c ))</description>
        <formula>AcctSeedERP__Unit_Cost__c * (1+ (Tax_Rate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit_Cost__c * (1+ (Tax_Rate__c ))</inlineHelpText>
        <label>Unit Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Old_CC__c</fullName>
        <description>HIdden field - &quot;Use Old CC&quot; field from the related Project record.  Used in the roll up triggers.</description>
        <formula>AcctSeedERP__Project__r.Use_Old_CC__c</formula>
        <label>Use Old CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>AcctSeedERP__Quantity__c * AcctSeedERP__Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity * Unit Cost = Value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Sales_Tax__c</fullName>
        <description>SF Calculation: Quantity x Unit Cost x Tax Rate.</description>
        <formula>AcctSeedERP__Quantity__c *  AcctSeedERP__Unit_Cost__c *  Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SF Calculation: Quantity x Unit Cost x Tax Rate.</inlineHelpText>
        <label>Value of Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>movement_date2__c</fullName>
        <inlineHelpText>Actual date that transaction occurred; can vary from Accounting Date if transaction was accrued for in a previous period.</inlineHelpText>
        <label>Movement Date</label>
        <type>Date</type>
    </fields>
    <label>Inbound Inventory Movement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Movement_Date__c</columns>
        <columns>Branch__c</columns>
        <columns>AcctSeedERP__Unit_Cost__c</columns>
        <columns>AcctSeedERP__Quantity__c</columns>
        <columns>AcctSeedERP__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IIM-{00000}</displayFormat>
        <label>Inbound Inventory Movement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Inventory Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Credit_GL_Account_Required</fullName>
        <active>false</active>
        <description>The Credit GL Account field is required unless the type field is &quot;Non-Accounting&quot; or &quot;Inventory Transfer&quot;</description>
        <errorConditionFormula>TEXT(AcctSeedERP__Type__c) != &quot;Non-Accounting&quot; &amp;&amp; TEXT(AcctSeedERP__Type__c) != &quot;Inventory Transfer&quot; &amp;&amp; ISBLANK(AcctSeedERP__Credit_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Credit_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Positive_Value</fullName>
        <active>false</active>
        <description>quantity must be greater than or equal to 0</description>
        <errorConditionFormula>AcctSeedERP__Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity__c</errorDisplayField>
        <errorMessage>quantity must be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Type_Is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(AcctSeedERP__Type__c))</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Type__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Unit_Cost_Is_Requried</fullName>
        <active>false</active>
        <description>Unit cost field is required</description>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Unit_Cost__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Unit_Cost__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ops_Division_Not_Required</fullName>
        <active>false</active>
        <description>Ops_Division_should be blank if certain GL Accounts are used</description>
        <errorConditionFormula>BEGINS( AcctSeedERP__Credit_GL_Account__r.Name , &quot;5&quot;) &amp;&amp; NOT(ISBLANK( AcctSeedERP__GL_Account_Variable_3__c )) || BEGINS(AcctSeedERP__Credit_GL_Account__r.Name , &quot;6&quot;) &amp;&amp; NOT(ISBLANK( AcctSeedERP__GL_Account_Variable_3__c ))</errorConditionFormula>
        <errorMessage>Ops Division should not contain a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ops_Division_Required</fullName>
        <active>false</active>
        <description>Ops_Division_Required if Indirects are selected as Variable Name</description>
        <errorConditionFormula>BEGINS( AcctSeedERP__Credit_GL_Account__r.Name , &quot;4&quot;) &amp;&amp; ISBLANK(  AcctSeedERP__GL_Account_Variable_3__c  ) || BEGINS(AcctSeedERP__Credit_GL_Account__r.Name , &quot;3&quot;) &amp;&amp; ISBLANK( AcctSeedERP__GL_Account_Variable_3__c  )</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__GL_Account_Variable_3__c</errorDisplayField>
        <errorMessage>You are using a GL account that requires the Ops Division to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Segment_Required</fullName>
        <active>false</active>
        <description>Sales Segment Required if Indirects are selected as Variable Name</description>
        <errorConditionFormula>BEGINS(AcctSeedERP__Credit_GL_Account__r.Name, &quot;5&quot;) &amp;&amp; ISBLANK( AcctSeedERP__GL_Account_Variable_2__c ) || BEGINS(AcctSeedERP__Credit_GL_Account__r.Name, &quot;3&quot;) &amp;&amp; ISBLANK( AcctSeedERP__GL_Account_Variable_2__c )</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__GL_Account_Variable_2__c</errorDisplayField>
        <errorMessage>You are using a GL account that requires the Sales Segment to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Segment_Should_be_Blank</fullName>
        <active>false</active>
        <description>Sales Segment Required if Indirects are selected as Variable Name</description>
        <errorConditionFormula>BEGINS(AcctSeedERP__Credit_GL_Account__r.Name, &quot;4&quot;) &amp;&amp; NOT(ISBLANK( AcctSeedERP__GL_Account_Variable_2__c )) || BEGINS(AcctSeedERP__Credit_GL_Account__r.Name, &quot;6&quot;) &amp;&amp; NOT(ISBLANK( AcctSeedERP__GL_Account_Variable_2__c ))</errorConditionFormula>
        <errorMessage>Sales Segment should not contain a value</errorMessage>
    </validationRules>
</CustomObject>